<resources>
    <string name="app_name">作业101(教师端)</string>
    <string name="label_cancel">取消</string>
    <string name="label_ok">确定</string>
    <string name="permission_title_rationale">权限需求</string>
    <string name="permission_read_storage_rationale">选择图片时需要读取权限</string>
    <string name="permission_write_storage_rationale">拍照时需要存储权限</string>
    <string name="login_please_input_phone_number">请输入手机号</string>
    <string name="login_please_input_password">请重新输入密码</string>
    <string name="login_agree">我已阅读并同意《xxx服务协议》</string>
    <string name="login_register">注册</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="register_notice">注册/忘记密码</string>
    <string name="register_please_input_captcha">请输入验证码</string>
    <string name="register_captcha">获取验证码</string>
    <string name="register_next">下一步</string>
    <string name="set_notice">设置密码</string>
    <string name="set_please_input_password">请输入6-20位字母数字密码</string>
    <string name="set_please_input_password_again">请重新输入密码</string>
    <string name="identity_notice">身份设定</string>
    <string name="identity_teacher">我是老师</string>
    <string name="identity_students">我是大学生</string>
    <string name="personal_notice">个人信息</string>
    <string name="personal_ll">昵称</string>
    <string name="personal_ll_default">苏小胖</string>
    <string name="personal_sex">性别</string>
    <string name="personal_sex_default">男</string>
    <string name="personal_date">出生日期</string>
    <string name="personal_date_default">1989-02-02</string>
    <string name="personal_area">地区</string>
    <string name="personal_area_default">湖南长沙</string>
    <string name="personal_introduce">个人介绍</string>
    <string name="personal_introduce_save">保存</string>
    <string name="personal_introduce_notice">请简要介绍下自己，让学生快速了解你</string>
    <string name="personal_introduce_font_count">0/2000</string>
    <string name="teaching_info_notice">教学信息</string>
    <string name="teaching_exp">教学经验</string>
    <string name="teaching_exp_default">6年</string>
    <string name="teaching_stage">教授阶段</string>
    <string name="teaching_stage_default">小学</string>
    <string name="teaching_grade">授课年级</string>
    <string name="teaching_grade_default">一年级</string>
    <string name="teaching_subject">教学科目</string>
    <string name="teaching_subject_default">语文</string>
    <string name="teaching_grade_notice">*可选多个年级</string>
    <string name="homepage_homework_tutorship">作业辅导</string>
    <string name="homepage_homework_check">作业检查</string>
    <string name="homepage_teacher_name">李阳木子</string>
    <string name="homepage_teacher_title">高级教师</string>
    <string name="homepage_teacher_score">评分</string>
    <string name="homepage_teacher_score_default">4.8</string>
    <string name="homepage_teacher_fans">粉丝</string>
    <string name="homepage_teacher_fans_default">2880</string>
    <string name="homepage_title">首页</string>
    <string name="homepage_start_tutorship">开启在线辅导</string>
    <string name="homepage_homework_have_order">已接单</string>
    <string name="homepage_homework_real_time">实时</string>
    <string name="homepage_homework_book">预约</string>
    <string name="homepage_homework_wait_to_help">等待去辅导</string>
    <string name="homepage_student_default_grade">/二年级</string>
    <string name="homepage_default_money">￥0.5元/分钟</string>
    <string name="homepage_take_orders">接单</string>
    <string name="homepage_go_check">去检查</string>
    <string name="homepage_go_tutorship">去辅导</string>
    <string name="homepage_distance_learning">距离辅导还有</string>
    <string name="homepage_connect_switch">关闭在线</string>
    <string name="homework_orders_details_check_price">检查价格</string>
    <string name="homework_orders_details_help_price">辅导价格</string>
    <string name="homework_orders_details_check_price_default">22.00元</string>
    <string name="homework_orders_details_take_order">去接单</string>
    <string name="homework_orders_details_time">辅导时间-</string>
    <string name="homework_orders_details_wait_to_help">距离辅导开始还有</string>
    <string name="tutorship_connection_students">连线学生</string>
    <string name="tutorship_teaching_grade">一年级/数学</string>
    <string name="tutorship_connecting">正在请求语音通话...</string>
    <string name="tutorship_cancel_connection">取消连接</string>
    <string name="tutorship_voice_call">语音通话中...</string>
    <string name="tutorship_start_topic">开始审题</string>
    <string name="tutorship_start_tutorship">开始辅导</string>
    <string name="tutorship_paint">画笔</string>
    <string name="tutorship_clean">清除</string>
    <string name="tutorship_undo">撤销</string>
    <string name="tutorship_restore">还原</string>
    <string name="tutorship_check_page_up">上一页</string>
    <string name="tutorship_check_page_dowm">下一页</string>
    <string name="tutorship_finish">辅导结束</string>
    <string name="tutorship_complete">完成</string>
    <string name="tutorship_the_finish">本次辅导结束</string>
    <string name="tutorship_duration">辅导时长：08分08秒</string>
    <string name="tutorship_money">已收金额：12.22元</string>
    <string name="tutorship_evaluate_notice">学生对您的评价如下</string>
    <string name="evaluate">评价</string>
    <string name="tutorship_evaluate_default">老师讲解的很好，很容易理解！</string>
    <string name="orders_homework_check">作业检查</string>
    <string name="orders_homework_help">作业辅导</string>
    <string name="orders_obligation">待付款</string>
    <string name="orders_tutorship_ing">辅导中</string>
    <string name="orders_checking">检查中</string>
    <string name="orders_complete">已完成</string>
    <string name="orders_cancel">已取消</string>
    <string name="orders_obligation_money">待付金额：</string>
    <string name="orders_paid_money">已付金额：</string>
    <string name="orders_teacher_honor">高级教师</string>
    <string name="orders_class">一年级/语文</string>
    <string name="orders_tutorship_duration">辅导时长：</string>
    <string name="orders_tutorship_duration_default">2分50秒</string>
    <string name="orders_check_money">检查金额：</string>
    <string name="orders_tutorship_money">辅导金额：</string>
    <string name="orders_tutorship_price_details">2.50元/分钟</string>
    <string name="orders_tutorship_amount_paid">应付金额：</string>
    <string name="orders_tutorship_amount_paid_default">￥55.00</string>
    <string name="orders_tutorship_orders_num">订单号</string>
    <string name="orders_tutorship_orders_num_default">201805021147</string>
    <string name="orders_tutorship_order_time">下单时间</string>
    <string name="orders_tutorship_order_time_default">2018-02-02 02:52</string>
    <string name="orders_tutorship_pay_way">支付方式</string>
    <string name="orders_tutorship_pay_way_default">微信支付</string>
    <string name="orders_tutorship_pay_time">支付时间</string>
    <string name="orders_tutorship_pay_time_default">2018-04-10 02:54</string>
    <string name="order_details">订单详情</string>
    <string name="orders_complain">投诉</string>
    <string name="orders_pay_balance">余额支付</string>
    <string name="orders_pay_weixin">微信支付</string>
    <string name="orders_pay_alipay">支付宝支付</string>
    <string name="wallet_my_wallet">我的钱包</string>
    <string name="wallet_account_balance">账户余额（元）</string>
    <string name="wallet_withdraw">提现</string>
    <string name="wallet_bill_details">明细</string>
    <string name="wallet_bill_filter">筛选</string>
    <string name="wallet_bill_time">时间</string>
    <string name="wallet_bill_time_default">9月25日08:08</string>
    <string name="wallet_time_format">yyyy年MM月dd日 HH:mm</string>
    <string name="wallet_select_time">选择时间</string>
    <string name="wallet_transaction_type">交易类型</string>
    <string name="wallet_all">全部</string>
    <string name="wallet_recharge">充值</string>
    <string name="wallet_add_card">添加银行卡</string>
    <string name="wallet_withdraw_money">提现金额</string>
    <string name="wallet_withdraw_money_available">可提现金额：¥1088.50</string>
    <string name="wallet_withdraw_notice">提现须知</string>
    <string name="wallet_withdraw_notice_details">1.申请提现金额不得低于50元\n2.每日提现最高金额不得超过5000\n3.每周日之前提交申请</string>
    <string name="wallet_cardholder">持卡人</string>
    <string name="wallet_cardholder_name">请填写持卡人姓名</string>
    <string name="wallet_card_num">银行卡号</string>
    <string name="wallet_please_input_card_num">请输入银行卡号</string>
    <string name="wallet_add_card_notice">*请绑定持卡人本人的银行卡</string>
    <string name="wallet_bind_card">绑定银行卡</string>
    <string name="wallet_bank_name">开户行</string>
    <string name="wallet_card_type">卡类型</string>
    <string name="wallet_ensure_bind">确认绑定</string>
    <string name="wallet_card_name">中国工商银行</string>
    <string name="wallet_mine_wallet">我的银行卡</string>

    <string name="dollar">元</string>
    <string name="dollar_per_minute">元/分钟</string>
    <string name="news">消息</string>
    <string name="notice">提示</string>
    <string name="notice_msg">您正在辅导中,确定要取消辅导吗？</string>
    <string name="homepage_info_visa">头像</string>
    <string name="homepage_info_real_name">实名认证</string>
    <string name="homepage_info_certified">待认证</string>
    <string name="homepage_info_education">学历认证</string>
    <string name="homepage_info_tea_qualification">教师资质</string>
    <string name="homepage_info_specialty_qualification">专业认证</string>
    <string name="homepage_info">个人中心</string>
    <string name="homepage_info_real_username">真实姓名</string>
    <string name="homepage_info_please_input_real_username">请输入真实姓名</string>
    <string name="homepage_info_id_card">身份证号</string>
    <string name="homepage_info_please_input_id_card">请输入身份证号</string>
    <string name="homepage_info_upload_id_card">上传身份证照片</string>
    <string name="homepage_info_sample">示例</string>
    <string name="homepage_info_please_upload_id_card_front">(请上床身份证正面照片)</string>
    <string name="homepage_info_please_upload_id_card_verso">(请上床身份证反面照片)</string>
    <string name="homepage_info_autonym_notice">*实名要求：</string>
    <string name="homepage_info_autonym_notice_one">1.请保证填写的信息真实有效；</string>
    <string name="homepage_info_autonym_notice_two">2.证件图片上的信息清晰可见、无遮挡、无修改；</string>
    <string name="homepage_info_edu">学历</string>
    <string name="homepage_info_school">学校</string>
    <string name="homepage_info_school_time">在校时间</string>
    <string name="homepage_info_upload_edu_pic">上传学历证明照片</string>
    <string name="homepage_info_upload_edu_pic_notice">*如果你是在校生，请上传学生证件照，如果你已经毕业，请上传毕业证照片</string>
    <string name="homepage_info_tea_qualification_notice">教师资质可以证明您的教师身份</string>
    <string name="homepage_info_tea_qualification_suggest">*请提交您的有效教师证件照片</string>
    <string name="commit">提交</string>
</resources>
