<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".wallet.AddCardActivity">

    <include layout="@layout/actionbar_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y50"
        >

        <TextView
            android:id="@+id/tv_wallet_cardholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:layout_marginLeft="@dimen/x24"
            android:layout_centerVertical="true"
            android:text="@string/wallet_cardholder"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_toRightOf="@+id/tv_wallet_cardholder"
            android:layout_centerVertical="true"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/black"
            android:hint="@string/wallet_cardholder_name"
            android:layout_marginLeft="@dimen/x34"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:layout_marginLeft="@dimen/x20"
        android:background="@color/line_bg"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y50"
        >

        <TextView
            android:id="@+id/tv_wallet_card_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:layout_marginLeft="@dimen/x24"
            android:layout_centerVertical="true"
            android:text="@string/wallet_card_num"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_toRightOf="@+id/tv_wallet_card_num"
            android:layout_centerVertical="true"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/black"
            android:hint="@string/wallet_please_input_card_num"
            android:layout_marginLeft="@dimen/x34"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:layout_marginLeft="@dimen/x20"
        android:background="@color/line_bg"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/wallet_add_card_notice"
        android:textSize="@dimen/sp_14"
        android:layout_marginTop="@dimen/x28"
        android:layout_gravity="center_horizontal"
        android:text="@string/wallet_add_card_notice"
        />
    <Button
        android:id="@+id/btn_wallet_add_card_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y40"
        android:background="@drawable/button_1"
        android:text="@string/register_next"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        />
</LinearLayout>