<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cl_bill_filter"
    android:background="@drawable/popup_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    >

    <TextView
        android:id="@+id/tv_transaction_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/wallet_transaction_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/y12"
        />
    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:text="@string/label_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/tv_transaction_type"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/y12"
        android:layout_marginLeft="@dimen/x16"
        />

    <View
        android:id="@+id/view_wallet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="@color/line_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_cancel"
        android:layout_marginTop="@dimen/y11"
        >
    </View>

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/font_color_select"
        android:textSize="@dimen/sp_16"
        android:text="@string/wallet_all"
        app:layout_constraintTop_toBottomOf="@+id/view_wallet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_homework_check"
        android:layout_marginTop="@dimen/y20"
        android:background="@drawable/wallet_tv_bg"
        app:layout_constraintHorizontal_chainStyle="spread"
        />
    <TextView
        android:id="@+id/tv_homework_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/font_color_unselected"
        android:textSize="@dimen/sp_16"
        android:text="@string/homepage_homework_check"
        app:layout_constraintTop_toBottomOf="@+id/view_wallet"
        app:layout_constraintLeft_toRightOf="@+id/tv_total"
        android:layout_marginTop="@dimen/y20"
        android:background="@drawable/wallet_tv_unselect_bg"
        app:layout_constraintRight_toLeftOf="@+id/tv_homework_tutorship"
        />
    <TextView
        android:id="@+id/tv_homework_tutorship"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/font_color_unselected"
        android:textSize="@dimen/sp_16"
        android:text="@string/homepage_homework_tutorship"
        app:layout_constraintTop_toBottomOf="@+id/view_wallet"
        app:layout_constraintLeft_toRightOf="@+id/tv_homework_check"
        app:layout_constraintRight_toLeftOf="@+id/tv_recharge"
        android:layout_marginTop="@dimen/y20"
        android:background="@drawable/wallet_tv_unselect_bg"
        />
    <TextView
        android:id="@+id/tv_recharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/font_color_unselected"
        android:textSize="@dimen/sp_16"
        android:text="@string/wallet_withdraw"
        app:layout_constraintTop_toBottomOf="@+id/view_wallet"
        app:layout_constraintLeft_toRightOf="@+id/tv_homework_tutorship"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/y20"
        android:background="@drawable/wallet_tv_unselect_bg"
        />
    <Button
        android:id="@+id/tv_ensure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_recharge"
        android:layout_marginTop="@dimen/y31"
        android:text="@string/label_ok"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/x43"
        android:layout_marginRight="@dimen/x52"
        android:background="@drawable/button_1"
        android:layout_marginBottom="@dimen/y19"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</android.support.constraint.ConstraintLayout>